<resources>
    <string name="app_name">GroceryAppPlus</string>
    <string name="grocery_plus">GroceryPlus</string>
    <string name="register_account">No account yet? Register Here.</string>
    <string name="back_to_login">Already have an Account? Login Here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Login</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="name_hint">Enter Name</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="register_text">Register</string>
</resources>