<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.LoginFragment">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_350dp"
        android:layout_margin="@dimen/_20dp"
        app:cardBackgroundColor="@color/light_blue_background"
        app:cardCornerRadius="@dimen/_20dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="@string/login_text"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_margin="@dimen/_20dp"
                android:background="@drawable/entry_field_background"
                android:elevation="@dimen/_10dp"
                android:gravity="center_vertical"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_margin="@dimen/_20dp"
                android:background="@drawable/entry_field_background"
                android:elevation="@dimen/_10dp"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/_10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/button_background"
                android:elevation="@dimen/_20dp"
                android:paddingStart="@dimen/_10dp"
                android:paddingEnd="@dimen/_10dp"
                android:textColor="@color/white"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textSize="@dimen/_20sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20dp"
        android:max="3"
        android:progress="100"
        android:elevation="@dimen/_40dp"
        android:visibility="gone"
        android:indeterminateTint="@color/load_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>